-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 10.0.0-beta1
-
None
-
3d57b1868 (10.0)
When selecting "Fossil" as version control system in the last page of a project wizard, I get this Error:
"Error dialog"
Error message from Version Control System: "A version control system repository could not be created in "C:\Users\alportal\Documents\untitled351".".
"Versio Control Pane"
14:53:42 Running in C:\Users\alportal\Documents\untitled351: C:\ProgramData\chocolatey\lib\fossil\tools\fossil.exe init --admin-user aa C:\Users\alportal\.ssh\untitled351.fossil project-id: 0546b4ca03215956b1d245f89e9db3d328725ea8 server-id: 2b2c7232612a99df08cbbe49b2deb42c422091b1 admin-user: aa (initial password is "GnEqZcirx6") 14:53:43 Running in C:\Users\alportal\Documents\untitled351: C:\ProgramData\chocolatey\lib\fossil\tools\fossil.exe open C:\Users\alportal\.ssh\untitled351.fossil directory C:/Users/alportal/Documents/untitled351 is not empty use the -f (--force) option to override or the -k (--keep) option to keep local files unchanged The command "C:\ProgramData\chocolatey\lib\fossil\tools\fossil.exe open C:\Users\alportal\.ssh\untitled351.fossil" terminated with exit code 1.
For Gerrit Dashboard: QTCREATORBUG-28762 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
459605,2 | Fossil: Force open a repository by default | 10.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |