Fossil: Force open a repository by default

Fixes: QTCREATORBUG-28762
Change-Id: Iac45e940eb32cdb68eb2e745c5e63d3cc48ac943
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>